--- a/2021-08-35.md
+++ b/2021-08-35.md
@@ -6,7 +6,7 @@ atob() -> 인코딩된 Base64 문자열을 디코드한다.
 유니코드를 Base64로 변환해야할 경우 일반적으로 InvalidCharacterError 예외 가 발생 한다.
 하지만 유니코드를Uniform Resource Identifier (URI) 컴포넌트로 변경하고 다시 Base 64 변경한다면, 가능하다.
 encodeURIComponent() 와 decodeURIComponent 를 이용하여, 유니코드 를 URI 으로 변경하여 사용할 수 있다.
-```
+<pre><code>
 var uni = '🙂';
 var data = encodeURIComponent(uni);
 // %F0%9F%99%82
@@ -16,6 +16,6 @@ var decode = window.atob(encode);
 // %F0%9F%99%82
 decodeURIComponent(decode);
 // 🙂
-```
+</code></pre>
 Base 64 는 전자 메일을 통한 이진 데이터 전송 등에 많이 쓰인다.
 A-Z,a-z,0–9,/+ 만을 사용하기 때문에, 문자 포맷이 달라 데이터를 손상시킬 수있는 시스템 간에 안정적으로 전송 될 수 있다.
